@@ -22,9 +22,6 @@
  *  This copyright notice MUST APPEAR in all copies of the script!
  ***************************************************************/
 
-require_once(PATH_tslib . 'class.tslib_pibase.php');
-require_once(t3lib_extMgm::extPath('powermail') . 'lib/class.tx_powermail_dynamicmarkers.php'); // file for dynamicmarker functions
-
 // This class saves powermail values in OTHER db tables if wanted (this class is not the main database class for storing)
 class tx_powermail_countryzones extends tslib_pibase {
 
