@@ -22,8 +22,6 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-require_once(PATH_tslib.'class.tslib_pibase.php');
-
 class tx_powermail_dynamicmarkers extends tslib_pibase {
 
     var $extKey = 'powermail';
