@@ -460,50 +460,50 @@ lib.powermailjs {
 		template = FILE
 		template.file = {$plugin.powermail.template.frontendJsTemplatePath}
 		marks {
-				VALIDATOR_LABEL_PLEASE_CORRECT = TEXT
-				VALIDATOR_LABEL_PLEASE_CORRECT.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_please_correct
-				VALIDATOR_LABEL_REQUIRED = TEXT
-				VALIDATOR_LABEL_REQUIRED.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_required
-				VALIDATOR_LABEL_ONE_REQUIRED = TEXT
-				VALIDATOR_LABEL_ONE_REQUIRED.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_one_required
-				VALIDATOR_LABEL_EMAIL = TEXT
-				VALIDATOR_LABEL_EMAIL.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_email
-				VALIDATOR_LABEL_URL = TEXT
-				VALIDATOR_LABEL_URL.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_url
-				VALIDATOR_LABEL_NUMBER = TEXT
-				VALIDATOR_LABEL_NUMBER.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_number
-				VALIDATOR_LABEL_DIGITS = TEXT
-				VALIDATOR_LABEL_DIGITS.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_digits
-				VALIDATOR_LABEL_ALPHANUM = TEXT
-				VALIDATOR_LABEL_ALPHANUM.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_alphanum
-				VALIDATOR_LABEL_DATE = TEXT
-				VALIDATOR_LABEL_DATE.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_date
-				VALIDATOR_LABEL_DATETIME = TEXT
-				VALIDATOR_LABEL_DATETIME.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_datetime
-				VALIDATOR_INVALIDTIME = TEXT
-				VALIDATOR_INVALIDTIME.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_invalidtime
-				VALIDATOR_LABEL_MAX = TEXT
-				VALIDATOR_LABEL_MAX.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_max
-				VALIDATOR_LABEL_MIN = TEXT
-				VALIDATOR_LABEL_MIN.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_min
-				VALIDATOR_DATEINPUT_MONTH = TEXT
-				VALIDATOR_DATEINPUT_MONTH.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_months
-				VALIDATOR_DATEINPUT_SHORTMONTH = TEXT
-				VALIDATOR_DATEINPUT_SHORTMONTH.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_shortMonths
-				VALIDATOR_DATEINPUT_DAYS = TEXT
-				VALIDATOR_DATEINPUT_DAYS.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_days
-				VALIDATOR_DATEINPUT_SHORTDAYS = TEXT
-				VALIDATOR_DATEINPUT_SHORTDAYS.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_shortDays
-				VALIDATOR_DATEINPUT_FORMAT = TEXT
-				VALIDATOR_DATEINPUT_FORMAT.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_format
-				VALIDATOR_DATEINPUT_FIRSTDAY = TEXT
-				VALIDATOR_DATEINPUT_FIRSTDAY.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_firstDay
-				VALIDATOR_DISABLE = TEXT
-				VALIDATOR_DISABLE.value = false
-				VALIDATOR_SINGLE_ERROR = TEXT
-				VALIDATOR_SINGLE_ERROR.value = false
-				VALIDATOR_SCROLL_TO_ERROR = TEXT
-				VALIDATOR_SCROLL_TO_ERROR.value = true
+			VALIDATOR_LABEL_PLEASE_CORRECT = TEXT
+			VALIDATOR_LABEL_PLEASE_CORRECT.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_please_correct
+			VALIDATOR_LABEL_REQUIRED = TEXT
+			VALIDATOR_LABEL_REQUIRED.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_required
+			VALIDATOR_LABEL_ONE_REQUIRED = TEXT
+			VALIDATOR_LABEL_ONE_REQUIRED.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_one_required
+			VALIDATOR_LABEL_EMAIL = TEXT
+			VALIDATOR_LABEL_EMAIL.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_email
+			VALIDATOR_LABEL_URL = TEXT
+			VALIDATOR_LABEL_URL.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_url
+			VALIDATOR_LABEL_NUMBER = TEXT
+			VALIDATOR_LABEL_NUMBER.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_number
+			VALIDATOR_LABEL_DIGITS = TEXT
+			VALIDATOR_LABEL_DIGITS.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_digits
+			VALIDATOR_LABEL_ALPHANUM = TEXT
+			VALIDATOR_LABEL_ALPHANUM.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_alphanum
+			VALIDATOR_LABEL_DATE = TEXT
+			VALIDATOR_LABEL_DATE.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_date
+			VALIDATOR_LABEL_DATETIME = TEXT
+			VALIDATOR_LABEL_DATETIME.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_datetime
+			VALIDATOR_INVALIDTIME = TEXT
+			VALIDATOR_INVALIDTIME.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_invalidtime
+			VALIDATOR_LABEL_MAX = TEXT
+			VALIDATOR_LABEL_MAX.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_max
+			VALIDATOR_LABEL_MIN = TEXT
+			VALIDATOR_LABEL_MIN.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_label_validate_min
+			VALIDATOR_DATEINPUT_MONTH = TEXT
+			VALIDATOR_DATEINPUT_MONTH.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_months
+			VALIDATOR_DATEINPUT_SHORTMONTH = TEXT
+			VALIDATOR_DATEINPUT_SHORTMONTH.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_shortMonths
+			VALIDATOR_DATEINPUT_DAYS = TEXT
+			VALIDATOR_DATEINPUT_DAYS.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_days
+			VALIDATOR_DATEINPUT_SHORTDAYS = TEXT
+			VALIDATOR_DATEINPUT_SHORTDAYS.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_shortDays
+			VALIDATOR_DATEINPUT_FORMAT = TEXT
+			VALIDATOR_DATEINPUT_FORMAT.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_format
+			VALIDATOR_DATEINPUT_FIRSTDAY = TEXT
+			VALIDATOR_DATEINPUT_FIRSTDAY.data = LLL:EXT:powermail/pi1/locallang.xml:JSvalidation_dateinput_firstDay
+			VALIDATOR_DISABLE = TEXT
+			VALIDATOR_DISABLE.value = false
+			VALIDATOR_SINGLE_ERROR = TEXT
+			VALIDATOR_SINGLE_ERROR.value = false
+			VALIDATOR_SCROLL_TO_ERROR = TEXT
+			VALIDATOR_SCROLL_TO_ERROR.value = true
 		}
 	}
 }
